Fix: memleak in Graph Editor Keyframe jump operator

In case no frame to jump to was found, `ANIM_animdata_freelist` wasnt
called.

Spotted while looking into #121463