source/blender/editors/space_graph/graph_edit.cc
@@ -2298,14 +2298,14 @@ static int keyframe_jump_exec(bContext *C, wmOperator *op)
     ANIM_nla_mapping_apply_fcurve(adt, fcu, true, true);
   }
 
+  ANIM_animdata_freelist(&anim_data);
+
   if (!found) {
     BKE_report(op->reports, RPT_INFO, "No more keyframes to jump to in this direction");
     return OPERATOR_CANCELLED;
   }
 
   BKE_scene_frame_set(scene, closest_frame);
-
-  ANIM_animdata_freelist(&anim_data);
 
   /* Set notifier that things have changed. */
   WM_event_add_notifier(C, NC_SCENE | ND_FRAME, ac.scene);
